domain refactoring